--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="bottom-half">
-<!--             <div class="bottom-panel">
+            <div class="bottom-panel">
                
                 <div id="conhecimento1Panel" class="conhecimentounlock-panel">            
                     <div class="panel-title">Aprendizado</div>
@@ -105,7 +105,7 @@
                 </div>
                 <div id="data3Panel" class="dataunlock-panel hidden">
                     <div class="panel-title">Desenvolvimento da AGI</div>
-                </div> -->
+                </div>
                            
         </div>
     </div>
