--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <div class="bottom-panel">
                
                 <div id="conhecimento1Panel" class="conhecimentounlock-panel">            
-<!--                     <div class="panel-title">Aprendizado</div> -->
-                    <button id="unlockDados" class="upgrade-button" data-cost="100">Treinar</button>
-                    <button id="unlockGrana" class="upgrade-button" data-cost="100">Trabalhar</button>
-                    <button id="unlockCodigo" class="upgrade-button" data-cost="100">Programar</button>
+<!--                      <div class="panel-title">Aprendizado</div> -->
+                    <button id="unlockDados" class="upgrade-button">Treinar</button>
+                    <button id="unlockGrana" class="upgrade-button">Trabalhar</button>
+                    <button id="unlockCodigo" class="upgrade-button">Programar</button>
                 </div>
                 <div id="conhecimento2Panel" class="conhecimentounlock-panel hidden">
 <!--                     <div class="panel-title">Maestria</div> -->
