--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="left-column">
                 <div class="resource-panel">
                     <div class="panel-title">Recursos</div>
-                    <div id="conhecimentoPanel" class="panel hidden">
+                    <div id="conhecimentoPanel" class="panel">
                         <div class="panel-title">Conhecimento <span class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></span></div>
                         <div class="unlock-buttons">
                             <button id="conhecimentoUnlock1" class="unlock-btn" data-unlock="1"></button>
@@ -64,7 +64,7 @@
         <div class="bottom-half">
             <div class="bottom-panel">
                
-                <div id="conhecimento1Panel" class="conhecimentounlock-panel">            
+                <div id="conhecimento1Panel" class="conhecimentounlock-panel hidden">            
                      <div class="panel-title">Aprendizado</div>
                     <button id="unlockDados" class="upgrade-button">Treinar</button>
                     <button id="unlockGrana" class="upgrade-button">Trabalhar</button>
