--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="bottom-half">
             <div class="bottom-panel">
                
-                <div id="conhecimento1Panel" class="conhecimentounlock-panel">            
+                <div id="conhecimento1Panel" class="conhecimentounlock-panel hidden">            
 <!--                      <div class="panel-title">Aprendizado</div> -->
                     <button id="unlockDados" class="upgrade-button">Treinar</button>
                     <button id="unlockGrana" class="upgrade-button">Trabalhar</button>
