--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 <!--                     <div class="panel-title">Especialização</div> -->
                 </div>                
 
-                <div id="data1Panel" class="dataunlock-panel hidden">
+                <div id="dados1Panel" class="dataunlock-panel hidden">
 <!--                     <div class="panel-title">Preparação de Dados</div> -->
                 </div>
-                <div id="data2Panel" class="dataunlock-panel hidden">
+                <div id="dados2Panel" class="dataunlock-panel hidden">
 <!--                     <div class="panel-title">Treinamento do Modelo</div> -->
                 </div>
-                <div id="data3Panel" class="dataunlock-panel hidden">
+                <div id="dados3Panel" class="dataunlock-panel hidden">
 <!--                     <div class="panel-title">Desenvolvimento da AGI</div> -->
                 </div>
                            
