--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="bottom-panel">
                
                 <div id="conhecimento1Panel" class="conhecimentounlock-panel hidden">            
-<!--                      <div class="panel-title">Aprendizado</div> -->
+                    <div class="panel-title">Aprendizado</div>
                     <button id="unlockDados" class="upgrade-button">Treinar</button>
                     <button id="unlockGrana" class="upgrade-button">Trabalhar</button>
                     <button id="unlockCodigo" class="upgrade-button">Programar</button>
